2017-03-07  Dean Jackson  <dino@apple.com>

        Some platforms won't be able to create a GPUDevice
        https://bugs.webkit.org/show_bug.cgi?id=169314
        <rdar://problems/30907521>

        Reviewed by Jon Lee.

        Protect for the case where the hardware doesn't support Metal.

        * TestWebKitAPI/Configurations/FeatureDefines.xcconfig:
        * TestWebKitAPI/Tests/WebCore/mac/GPUDevice.mm:
        (TestWebKitAPI::TEST):

2017-03-07  Maureen Daum  <mdaum@apple.com>

        Correctly check for an empty database file.
        <rdar://problem/30542242> Removing Website Data not working (WebSQL directories being left behind)
        https://bugs.webkit.org/show_bug.cgi?id=169256

        Reviewed by Brady Eidson.

        Add a test for DatabaseTracker::deleteDatabaseFileIfEmpty that verifies
        that if we pass in an empty file it actually gets deleted.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        Add TestWebKitAPI/Tests/WebCore/DatabaseTrackerTest.cpp.
        * TestWebKitAPI/Tests/WebCore/DatabaseTrackerTest.cpp: Added.
        (TestWebKitAPI::TEST):

2017-03-07  Alex Christensen  <achristensen@webkit.org>

        [URLParser] Fix file URLs that are just file:// and a Windows drive letter
        https://bugs.webkit.org/show_bug.cgi?id=169242

        Reviewed by Tim Horton.

        * TestWebKitAPI/Tests/WebCore/URLParser.cpp:
        (TestWebKitAPI::TEST_F):

2017-03-07  Jonathan Bedard  <jbedard@apple.com>

        Standardize device/simulator naming conventions
        https://bugs.webkit.org/show_bug.cgi?id=169083
        <rdar://problem/30810466>

        Reviewed by Alexey Proskuryakov.

        * Scripts/build-webkit: Document --ios-device and --simulator options.
        * Scripts/package-root:
        (usage): Ditto.
        * Scripts/run-api-tests: Document --simulator option.
        * Scripts/webkitdirs.pm:
        (argumentsForConfiguration): Use --ios-device by default rather than --device.